Fixed small issue with Wirkung/Bereich on small screens

--- a/sass/_claudio-custom.scss
+++ b/sass/_claudio-custom.scss
@@ -58,7 +58,6 @@ p, td, a {
 
   .e-titles {
     position: absolute;
-    bottom: 60px;
     width: 100%;
     padding: 20px;
 
@@ -214,7 +213,7 @@ p, td, a {
 
     .e-left {
       float: left;
-      width: 30%;
+      width: 45%;
       text-align: right;
       padding: 10px;
       font-weight: 600;
@@ -223,7 +222,7 @@ p, td, a {
 
     .e-right {
       float: right;
-      width: 70%;
+      width: 55%;
       text-align: left;
       padding: 10px;
     }
